# rtlsdr-radio

./: .gitignore  README.md  eslint.config.js  index.html  next.config.mjs  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: releases.yaml
build_scripts/: CMakeLists.txt  build_app_deps.sh  nrsc5.ps1  nrsc5.sh  run_all.py
designs/: First Icon Attempt.psd  Second Icon Attempt.ai
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: custom_radiorust_blocks.rs  lib.rs  main.rs  nrsc5.rs  rtlsdr.rs  sdr_enumeration.rs  utils.rs
src-tauri/src/modes/: crc.rs  mod.rs  types.rs
src-tauri/src/modes/adsb/: airborne_pos.rs  airborne_vel.rs  aircraft_ident.rs  mod.rs
src-tauri/src/modes/adsb_db/: mod.rs  types.rs
src-tauri/src/modes/arla/: mod.rs  types.rs
src-tauri/src/nrsc5/: mod.rs  nrsc5_header.rs
src-tauri/src/radio_services/: mod.rs  nrsc5.rs  soapysdr_adsb.rs  soapysdr_radio.rs
src-tauri/src/radiorust_blocks/: adsb_decode.rs  am_demod.rs  better_cpal.rs  hd_radio_decode.rs  mod.rs  pauseable.rs  rbds_decode.rs  wav_writer.rs
src-tauri/src/sdr/: enumeration.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/components/: AdsbDecoderView.tsx  AmRadioControls.tsx  AppView.tsx  BottomBar.tsx  Nrsc5Controls.tsx  OsDisplay.tsx  RtlSdrControls.tsx  SavedStationsMenu.tsx  SdrSelector.tsx  SoapySdrConstrols.tsx  ThemeProvider.tsx
src/components/Radio/: Nrsc5Controls.tsx  RadioView.tsx  RtlSdrControls.tsx  SavedStationsMenu.tsx
src/lib/: stationsStorage.ts  statsStorage.ts  types.ts  utils.ts
