[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["shell-sidecar", "process-command-api"] }
soapysdr = "0.4.0"
cpal = "0.15.2"
demod_fm = "1.0.0"
num = "0.4.3"

[patch.crates-io]
# This package is so old that the `num` crate has conflicting dependencies.
# This is a custom patch to use a newer num version.
demod_fm = { git = "https://github.com/njfdev/demod_fm.rs.git" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
