[package]
name = "rtlsdr_radio"
version = "0.5.0-beta.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "rtlsdr_radio"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
cpal = "0.15.2"
radiorust = { version = "0.5.0", features = ["soapysdr", "cpal"] }
soapysdr = "0.3.2"
tokio = "1.29.1"
biquad = "0.4.2"
hound = "3.5.1"
rustfft = "6.2.0"
fundsp = "0.18.2"
crc = "3.0.1"
nalgebra = "0.33.0"
tauri-plugin-shell = "2.0.0-beta.10"
libloading = "0.8.5"
unit-conversions = "0.1.16"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "rtlsdr_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.12"
