[package]
name = "rtlsdr_radio"
version = "0.6.0-beta.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "rtlsdr_radio"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
bindgen = "0.68" # for building nrsc5 bindings

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
cpal = "0.15.2"
radiorust = { version = "0.5.0", features = ["soapysdr", "cpal"] }
soapysdr = "0.3.2"
tokio = "1.29.1"
biquad = "0.4.2"
hound = "3.5.1"
rustfft = "6.2.0"
fundsp = "0.18.2"
crc = "3.0.1"
nalgebra = "0.33.0"
tauri-plugin-shell = "2.0.0-rc"
libloading = "0.8.5"
unit-conversions = "0.1.16"
reqwest = { version = "0.11.18", features = ["json"] }
tauri-bundler = "2.0.1-rc"
chrono = { version = "0.4.31", features = ["serde"] }
souvlaki = "0.7.0"
tauri-plugin-log = "2.0.0-rc"
log = "0.4.22"
soapysdr-sys = "0.7.5"
rusb = "0.9.4"
struct_iterable = "0.1.1"
libc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "rtlsdr_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc"

[profile.dev]
split-debuginfo = "unpacked"
